# gipyshell

./: .mtn-ignore  Makefile.am  README.gipyplot  TODO.txt  configure.ac  release-expand.config  tests.config
install/rpm/: gipyshell.spec
ipython_profile/: history  ipy_user_conf.py  ipythonrc  ipythonrc-genesis3
ipython_profile/db/shadowhist/: 05  09  0d  21  2c  3b  52  5d  70  74  78  7a  82  83  84  87  92  94  9d  a7  af  b4  b7  be  cf  dc
ipython_profile/genesis3/: ipython_config.py
ipython_profile/profile_genesis3/: history.sqlite  ipython_config.py  ipython_notebook_config.py  ipython_qtconsole_config.py
python/neurospaces/: __cbi__.py
src/: Makefile.am  header.c  main.c
tests/: introduction.html
tests/scripts/: reset.py  singlep.py
tests/specifications/: interactive.t  passive.t  reset.t
tests/specifications/strings/: reset.txt  singlep.txt
